--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -15,7 +15,7 @@ import LoginModal from '../components/LoginModal.astro';
     <div class="relative min-h-screen flex flex-col items-center justify-center px-4 text-center">
       <h1 class="hero-title fade-in">
        
-        <span class="block mt-4">Carnaval de Oruro</span>
+        <span class="block mt-4">Carnaval de Oruro 2025</span>
       </h1>
       
       <p class="hero-subtitle fade-in">
